# edanalyzer

./: README.md  cli.py  config.yaml  constants.py  data.py  database.py  high_confidence_ligands.yaml  pyproject.toml  test_system_known_hits.yaml  torch_dataset.py  torch_network.py
edanalyzer/: cli.py  data.py  database.py  torch_dataset.py  torch_network.py
scripts/: run.py  score_build.py  train.py
scripts/collate/: collate_annotations.py  collate_database.py  collate_matched_pandda_2_negatives.py  collate_pandda_2_build_data.py  collate_pandda_2_event_data.py  collate_pandda_2_negatives.py  copy_minimal_pandda_data.py  fix_dataset_cifs.py  generate_build_scoring_dataset.py  generate_event_scoring_dataset.py  get_build_deltas_distribution.py  get_build_scoring_annotations.py  get_canonical_smiles_and_atom_names.py  get_event_scoring_annotations.py  make_build_scoring_database.py  make_delta_array.py  run_panddas.py  run_panddas_slurm.py
scripts/inspect/: event_scoring_test.py  make_build_reannotation_pandda.py  make_event_reannotation_pandda.py  make_reannotation_pandda.py  test_model_matches_pandda.py
scripts/misc/: compare_to_reference.py  fix_SP100A.py  pandda_processed_datasets_to_model_building.py  rerun_test_panddas.py  yaml_to_hdf5.py
scripts/train/: train_build_scoring.py  train_build_scoring_2.py  train_build_scoring_3.py  train_build_scoring_4.py  train_build_scoring_5.py  train_build_scoring_correlation.py  train_build_scoring_correlation_zarr.py  train_build_scoring_hdf5.py  train_build_scoring_pred.py  train_event_scoring.py  train_water_score.py  (+2 more)
(+45 files in other folders)
